# llama_cpp-rs

./: .gitmodules
crates/llama_cpp/: Cargo.toml
crates/llama_cpp/src/: lib.rs  sampler_chain.rs  standard_sampler.rs
crates/llama_cpp/src/grammar/: mod.rs
crates/llama_cpp/src/model/: backend.rs  mod.rs  params.rs
crates/llama_cpp/src/session/: mod.rs  params.rs
crates/llama_cpp/tests/: builder_test.rs
crates/llama_cpp_sys/: Cargo.toml  build.rs
crates/llama_cpp_sys/src/: lib.rs
crates/llama_cpp_tests/: Cargo.toml
crates/llama_cpp_tests/src/: embeddings_edge_cases.rs  lib.rs  test_model_downloader.rs
