[package]
name = "llama_cpp_tests"
version = "0.3.2"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
futures = { workspace = true }
llama_cpp = { version = "^0.3.2", path = "../llama_cpp", default-features = false, features = ["native", "compat"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
once_cell = "1.19"

[features]
vulkan = ["llama_cpp/vulkan"]
cuda = ["llama_cpp/cuda"]
